write general introduction and general conclusion

--- a/writing/includes/general-conclusion.tex
+++ b/writing/includes/general-conclusion.tex
@@ -1,17 +1,3 @@
 \chapter*{General Conclusion}
 \paragraph{}
-In conclusion, our research focused on developing a deep learning model for Arabic sign language recognition (SLR) using a pre-existing American Sign Language (ASL) dataset. Through our study, we aimed to bridge the communication gap between individuals fluent in sign language and those who are not, thereby promoting inclusivity and accessibility for the Arabic sign language community.
-\paragraph{}
-We began by introducing the objectives of our research and providing an overview of the report's structure. We then proceeded to discuss the ASL dataset and the preprocessing steps undertaken to prepare the data for model training. The dataset, although not specifically dedicated to Arabic sign language, served as a foundation for our research and allowed us to explore the potential of deep learning in SLR.
-\paragraph{}
-Our methodology involved the implementation of deep learning models for both word and character recognition. We carefully selected and designed the architecture of the models, considering the unique characteristics and challenges associated with Arabic sign language gestures. The models were trained using the preprocessed dataset, and the experimental results demonstrated their effectiveness in accurately interpreting and recognizing sign language gestures.
-\paragraph{}
-The evaluation results showcased promising performance metrics, including high accuracy, precision, recall, and F1 scores for both word and character recognition. The confusion matrices and classification reports depicted minimal errors, further validating the robustness of our models. We observed that the models excelled in correctly identifying most sign language gestures, with only slight confusion observed between certain similar gestures.
-\paragraph{}
-While our research yielded positive results, it is important to acknowledge the limitations of our approach. The utilization of an ASL dataset instead of a dedicated Arabic sign language dataset restricted our ability to capture the unique characteristics and nuances of Arabic sign language. Future work should prioritize the collection and curation of a comprehensive Arabic sign language dataset to further enhance the performance and accuracy of SLR models specifically tailored to the Arabic context.
-\paragraph{}
-In summary, our research contributes to the advancement of Arabic sign language recognition through the application of deep learning techniques. Our models showcased remarkable accuracy and precision in interpreting sign language gestures, laying the foundation for future research and development in the field of Arabic sign language communication.
-\paragraph{}
-We believe that our findings have significant implications for fostering inclusivity and accessibility for individuals with hearing impairments in Arabic-speaking communities. The development of robust and accurate SLR systems can empower individuals fluent in sign language and facilitate effective communication with the broader society. By raising awareness and advocating for the needs of the Arabic sign language community, we hope to promote equal opportunities and create a more inclusive society.
-\paragraph{}
-Ultimately, our research serves as a stepping stone towards the creation of sophisticated Arabic sign language recognition systems, enabling seamless communication and fostering greater understanding and empathy for individuals with hearing impairments.
+In this report, we have tackled the challenge of \ac{slr} using \ac{dl} techniques. Despite the lack of existing approaches for \ac{asp} recognition, we have successfully developed and evaluated a \ac{dl} model using sensor-based \ac{asl} datasets. Our results demonstrate the potential of \ac{dl}, particularly \ac{lstm}, in accurately recognizing \ac{asl} gestures. Moreover, we have implemented the model on the ESP32 microcontroller, enabling real-time \ac{slr} on low-power and portable devices. While the absence of a dedicated \ac{asp} dataset remains a limitation, our work serves as a foundation for future research in this domain. Collecting a comprehensive dataset and refining the recognition model for \ac{asp} are crucial next steps. By promoting inclusivity and accessibility, we aim to inspire further advancements in \ac{slr} and empower individuals with hearing impairments.
