add general introduction and general conclusion to content table. replace classification report iamges with tables

--- a/writing/includes/dedication.tex
+++ b/writing/includes/dedication.tex
@@ -17,13 +17,13 @@
 	
 	To my dear father
 	
-	To my dear sisters and brothers
+	To my sisters and brothers
 	
 	To my adorable grandmother
 	
-	To all my uncles, aunts and cousins
+	To my friends and colleagues
 	
-	To all my friends and colleagues
+	To my relatives and neighbors
 	
 	To every one who have supported me
 	\par
