--- a/writing/includes/general-introduction.tex
+++ b/writing/includes/general-introduction.tex
@@ -1,5 +1,5 @@
 \chapter*{General Introduction}
-\section{Context of Work}
+\section*{Context of Work}
 \paragraph{}
 \ac{slr} is a rapidly evolving field that aims to enable effective communication between individuals with hearing impairments who use \ac{sl} and those who do not. \ac{sl}, including \ac{asp}, are visual languages that rely on hand gestures, facial expressions, and body movements to convey meaning. Recognizing and interpreting \ac{sl} gestures accurately is essential for facilitating inclusive communication and ensuring equal access to information and services for the deaf community.
 \paragraph{}
@@ -13,11 +13,11 @@ Furthermore, we aim to implement the developed \ac{dl} model on the ESP32 microc
 \paragraph{}
 In the following sections of this report, we present the state of the art in \ac{slr}, related works in the field, the conception of the TAKALEM gloves, the development of the \ac{dl} model, and the evaluation of its performance. Through our research, we strive to contribute to the advancement of \ac{asp} recognition technology and promote inclusivity and accessibility for individuals with hearing impairments.
 
-\section{Problematic}
+\section*{Problematic}
 \paragraph{}
 The lack of existing approaches for \ac{sl} recognition necessitates starting from scratch in the development of this systems. Furthermore, the limited availability of the needed materials to construct our own dataset and the time constraints we faced led us to leverage a sensor-based \ac{asl} dataset. Although this dataset differs from \ac{asp}, it serves as a foundation for our research and enables us to explore the effectiveness of \ac{dl} techniques in interpreting and recognizing \ac{sl} gestures.
 
-\section{Objectives}
+\section*{Objectives}
 \paragraph{}
 The main objectives of our research are as follows:
 \begin{itemize}
@@ -28,7 +28,7 @@ The main objectives of our research are as follows:
 	\item Contribute to the advancement of \ac{asp} recognition technology and facilitate effective communication between \ac{sl} users and the wider community.
 \end{itemize}
 
-\section{Structure of the Report}
+\section*{Structure of the Report}
 \paragraph{}
 The report is structured as follows:
 
