--- a/writing/main.tex
+++ b/writing/main.tex
@@ -164,12 +164,14 @@
 	\clearpage
 	\pagenumbering{arabic}
 	\pagestyle{fancy}
+	\addcontentsline{toc}{chapter}{General Introduction}
 	\input{includes/general-introduction.tex}
 	\clearpage
 	\input{includes/part1.tex}
 	\clearpage
 	\input{includes/part2.tex}
 	\clearpage
+	\addcontentsline{toc}{chapter}{General Conclusion}
 	\input{includes/general-conclusion.tex}
 	\clearpage
 	\bibliographystyle{ieeetr}
