change protorype image and begin in chapter 2

--- a/writing/includes/part2/section6.tex
+++ b/writing/includes/part2/section6.tex
@@ -43,33 +43,33 @@ In summary, both the word and character recognition models demonstrate excellent
 		\hline
 		& precision & recall & f1-score & support \\
 		\hline
-		0 & 0.89 & 0.86 & 0.87 & 8550 \\
+		bad & 0.89 & 0.86 & 0.87 & 8550 \\
 		\hline
-		1 & 0.96 & 0.98 & 0.97 & 9000 \\
+		deaf & 0.96 & 0.98 & 0.97 & 9000 \\
 		\hline
-		2 & 0.93 & 0.99 & 0.96 & 6300 \\
+		fine & 0.93 & 0.99 & 0.96 & 6300 \\
 		\hline
-		3 & 0.82 & 0.84 & 0.83 & 6300 \\
+		good & 0.82 & 0.84 & 0.83 & 6300 \\
 		\hline
-		4 & 0.98 & 0.98 & 0.98 & 7650 \\
+		goodbye & 0.98 & 0.98 & 0.98 & 7650 \\
 		\hline
-		5 & 0.98 & 0.96 & 0.97 & 7800 \\
+		hello & 0.98 & 0.96 & 0.97 & 7800 \\
 		\hline
-		6 & 0.99 & 0.99 & 0.99 & 7800 \\
+		hungry & 0.99 & 0.99 & 0.99 & 7800 \\
 		\hline
-		7 & 0.91 & 0.89 & 0.90 & 7800 \\
+		me & 0.91 & 0.89 & 0.90 & 7800 \\
 		\hline
-		8 & 1.00 & 0.99 & 1.00 & 7650 \\
+		no & 1.00 & 0.99 & 1.00 & 7650 \\
 		\hline
-		9 & 0.99 & 0.97 & 0.98 & 7050 \\
+		please & 0.99 & 0.97 & 0.98 & 7050 \\
 		\hline
-		10 & 0.99 & 1.00 & 1.00 & 8400 \\
+		sorry & 0.99 & 1.00 & 1.00 & 8400 \\
 		\hline
-		11 & 0.90 & 0.93 & 0.91 & 6900 \\
+		thankyou & 0.90 & 0.93 & 0.91 & 6900 \\
 		\hline
-		12 & 0.97 & 0.99 & 0.98 & 6150 \\
+		yes & 0.97 & 0.99 & 0.98 & 6150 \\
 		\hline
-		13 & 0.91 & 0.87 & 0.89 & 7650 \\
+		you & 0.91 & 0.87 & 0.89 & 7650 \\
 		\hline
 		accuracy & - & - & 0.95 & 105000 \\
 		\hline
@@ -85,57 +85,57 @@ In summary, both the word and character recognition models demonstrate excellent
 		\hline
 		& precision & recall & f1-score & support \\
 		\hline
-		0 & 1.00 & 0.96 & 0.98 & 8400 \\
+		a & 1.00 & 0.96 & 0.98 & 8400 \\
 		\hline
-		1 & 1.00 & 0.98 & 0.99 & 6900 \\
+		b& 1.00 & 0.98 & 0.99 & 6900 \\
 		\hline
-		2 & 0.95 & 0.89 & 0.92 & 9300 \\
+		c & 0.95 & 0.89 & 0.92 & 9300 \\
 		\hline
-		3 & 0.91 & 0.89 & 0.90 & 7200 \\
+		d & 0.91 & 0.89 & 0.90 & 7200 \\
 		\hline
-		4 & 0.83 & 0.98 & 0.90 & 6900 \\
+		e & 0.83 & 0.98 & 0.90 & 6900 \\
 		\hline
-		5 & 0.97 & 1.00 & 0.99 & 6750 \\
+		f & 0.97 & 1.00 & 0.99 & 6750 \\
 		\hline
-		6 & 1.00 & 1.00 & 1.00 & 8850 \\
+		g & 1.00 & 1.00 & 1.00 & 8850 \\
 		\hline
-		7 & 1.000 & 1.00 & 1.00 & 6600 \\
+		h & 1.000 & 1.00 & 1.00 & 6600 \\
 		\hline
-		8 & 0.94 & 0.96 & 0.95 & 9150 \\
+		i & 0.94 & 0.96 & 0.95 & 9150 \\
 		\hline
-		9 & 0.95 & 0.93 & 0.94 & 7800 \\
+		j & 0.95 & 0.93 & 0.94 & 7800 \\
 		\hline
-		10 & 0.96 & 0.99 & 0.97 & 7800 \\
+		k & 0.96 & 0.99 & 0.97 & 7800 \\
 		\hline
-		11 & 0.95 & 1.00 & 0.97 & 6750 \\
+		l & 0.95 & 1.00 & 0.97 & 6750 \\
 		\hline
-		12 & 1.00 & 0.99 & 0.99 & 8100 \\
+		m & 1.00 & 0.99 & 0.99 & 8100 \\
 		\hline
-		13 & 0.99 & 0.93 & 0.96 & 7500 \\
+		n & 0.99 & 0.93 & 0.96 & 7500 \\
 		\hline
-		14 & 0.93 & 0.96 & 0.94 & 7500 \\
+		o & 0.93 & 0.96 & 0.94 & 7500 \\
 		\hline
-		15 & 1.00 & 1.00 & 1.00 & 5850 \\
+		p & 1.00 & 1.00 & 1.00 & 5850 \\
 		\hline
-		16 & 1.00 & 1.00 & 1.00 & 7500 \\
+		q & 1.00 & 1.00 & 1.00 & 7500 \\
 		\hline
-		17 & 0.85 & 0.86 & 0.85 & 7950 \\
+		r & 0.85 & 0.86 & 0.85 & 7950 \\
 		\hline
-		18 & 0.91 & 0.82 & 0.86 & 7650 \\
+		s & 0.91 & 0.82 & 0.86 & 7650 \\
 		\hline
-		19 & 0.93 & 0.91 & 0.92 & 7350 \\
+		t & 0.93 & 0.91 & 0.92 & 7350 \\
 		\hline
-		20 & 0.86 & 0.91 & 0.88 & 8100 \\
+		u & 0.86 & 0.91 & 0.88 & 8100 \\
 		\hline
-		21 & 0.87 & 0.83 & 0.85 & 6600 \\
+		v & 0.87 & 0.83 & 0.85 & 6600 \\
 		\hline
-		22 & 1.00 & 1.00 & 1.00 & 6450 \\
+		w & 1.00 & 1.00 & 1.00 & 6450 \\
 		\hline
-		23 & 0.97 & 0.99 & 0.98 & 7200 \\
+		x & 0.97 & 0.99 & 0.98 & 7200 \\
 		\hline
-		24 & 0.99 & 0.99 & 0.99 & 7950 \\
+		y & 0.99 & 0.99 & 0.99 & 7950 \\
 		\hline
-		25 & 0.98 & 0.97 & 0.97 & 6900 \\
+		z & 0.98 & 0.97 & 0.97 & 6900 \\
 		\hline
 		accuracy & - & - & 0.95 & 195000 \\
 		\hline
