remove unnecessary section from chapter 2

--- a/writing/includes/part1/chapter2.tex
+++ b/writing/includes/part1/chapter2.tex
@@ -3,4 +3,4 @@
 \input{includes/part1/chapter2/section2.tex}
 \input{includes/part1/chapter2/section3.tex}
 \input{includes/part1/chapter2/section4.tex}
-\input{includes/part1/chapter2/section5.tex}
+%\input{includes/part1/chapter2/section5.tex}
