--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -1,3 +1,13 @@
+@article{ref-article,
+	title={Exploiting domain transformation and deep learning for hand gesture recognition using a low-cost dataglove},
+	author={Faisal, M. A. and Abir, F. F. and Ahmed, M. U. and Ahad, M. A.},
+	journal={Scientific Reports},
+	volume={12},
+	number={1},
+	pages={1-15},
+	year={2022},
+	doi={10.1038/s41598-022-25108-2}
+}
 @book{sara,
 	author = {Sara Lanesman},
 	title = {Algerian Jewish Sign Language: its emergence and survival},
@@ -29,28 +39,69 @@
 	date = {2020},
 	pages = {12}
 }
-@misc{wiki,
+@online{wiki,
 	title = {Algerian Sign Language - wikipedia},
 	date = {2022, December 31},
 	note = {\url{https://en.wikipedia.org/wiki/Algerian_Sign_Language}}
 }
-@misc{asp_img,
-	title = {African Sign Lnaguages Resource Center - Algeria},
+@online{asp_img,
+	title = {Profiles of African Sign Languages and Deaf Culture - Algeria},
 	note = {\url{https://africansignlanguagesresourcecenter.com/profiles-of-african-sign-languages-and-deaf-culture-54-countries/algeria/}}
 }
-@misc{ethnologue,
+@online{ethnologue,
 	title = {Algerian Sign Language - ethnologue},
 	note = {\url{https://www.ethnologue.com/25/language/asp/}}
 }
-@misc{flex,
+@online{flex,
 	title = {Flex-Sensor-components101},
 	note = {\url{https://components101.com/sensors/flex-sensor-working-circuit-datasheet}},
 }
-@misc{mpu,
+@online{mpu,
 	title = {MPU6050-components101},
 	note = {\url{https://components101.com/sensors/mpu6050-module}},
 }
-@misc{mpu-pinout,
+@online{mpu-pinout,
 	title = {Interfacing ESP32 with MPU6050},
 	note = {\url{https://www.tutorialspoint.com/esp32_for_iot/interfacing_esp32_with_mpu6050.htm}},
 }
+@online{fingerspelling,
+	title = {Lifeprint Fingurespell Library}
+	note = {https://www.lifeprint.com/asl101/fingerspelling/index.htm}
+}
+@inproceedings{wu2018american,
+	title={American Sign Language fingerspelling classification using convolutional neural networks},
+	author={Wu, J. K. and Gotmare, A. and Huang, G. and Manohar, P. and Prabhakar, R. K.},
+	booktitle={Proceedings of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)},
+	year={2018}
+}
+@inproceedings{baker2010sign,
+	title={Sign language research and application: Linguistic and pedagogical implications},
+	author={Baker, S. K. and Metzler, M. and Brennan, R. E.},
+	booktitle={Proceedings of the Workshop on the Representation and Processing of Sign Languages: Beyond the Manual Channel},
+	year={2010}
+}
+@article{lu2008database,
+	title={A database and computational techniques for the analysis of the phonetic structure of American Sign Language},
+	author={Lu, H. and Neidle, C. and Sclaroff, S.},
+	journal={Computer Vision and Image Understanding},
+	volume={110},
+	number={3},
+	pages={225-243},
+	year={2008}
+}
+@inproceedings{starner1995real,
+	title={Real-time American Sign Language recognition from video using hidden Markov models},
+	author={Starner, T. and Pentland, A.},
+	booktitle={Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+	year={1995}
+}
+@article{li2011framework,
+	title={A framework for sign language recognition using sub-units},
+	author={Li, J. and Zhao, G. and Pietikäinen, M.},
+	journal={Pattern Recognition Letters},
+	volume={32},
+	number={8},
+	pages={1157-1163},
+	year={2011}
+}
+
