correct the references error

--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -1,3 +1,23 @@
+@misc{asp_img,
+	title = {Profiles of African Sign Languages and Deaf Culture - Algeria},
+	note = {\url{https://africansignlanguagesresourcecenter.com/profiles-of-african-sign-languages-and-deaf-culture-54-countries/algeria/}}
+}
+@misc{flex,
+	title = {Flex-Sensor-components101},
+	note = {\url{https://components101.com/sensors/flex-sensor-working-circuit-datasheet}},
+}
+@misc{mpu-pinout,
+	title = {Interfacing ESP32 with MPU6050},
+	note = {\url{https://www.tutorialspoint.com/esp32_for_iot/interfacing_esp32_with_mpu6050.htm}},
+}
+@article{state_of_the_art,
+	author = {Sahoo, Ashok and Mishra, Gouri and Ravulakollu, Kiran},
+	title = {Sign language recognition: State of the art},
+	year = {2014},
+	month = {02},
+	volume = {9},
+	journal = {ARPN Journal of Engineering and Applied Sciences}
+}
 @article{ref-article,
 	title={Exploiting domain transformation and deep learning for hand gesture recognition using a low-cost dataglove},
 	author={Faisal, M. A. and Abir, F. F. and Ahmed, M. U. and Ahad, M. A.},
@@ -8,65 +28,9 @@
 	year={2022},
 	doi={10.1038/s41598-022-25108-2}
 }
-@book{sara,
-	author = {Sara Lanesman},
-	title = {Algerian Jewish Sign Language: its emergence and survival},
-	date = {2016},
-	institution = {Ishara Press},
-	isbn = {9780992922108},
-	ocn = {97809,92922108},
-	pages = {12}
-}
-@article{5perc,
-	author = {Sahoo, Ashok and Mishra, Gouri and Ravulakollu, Kiran},
-	title = {Sign language recognition: State of the art},
-	year = {2014},
-	month = {02},
-	volume = {9},
-	journal = {ARPN Journal of Engineering and Applied Sciences}
-}
-@thesis{teaching,
-	author = {Hichem Abdelouafi and Mohammed Omari},
-	title = {Teaching Sign Language to the Deaf Children in Adrar, Algeria},
-	institution = {Ahmed Draia University - Adrar},
-	date = {2018},
-	pages = {12}
-}
-@report{chalenges,
-	author = {Hichem Abdelouafi},
-	title = {Challenges of Deaf Education in Algeria},
-	institution = {University of Adrar Algeria},
-	date = {2020},
-	pages = {12}
-}
-@online{wiki,
-	title = {Algerian Sign Language - wikipedia},
-	date = {2022, December 31},
-	note = {\url{https://en.wikipedia.org/wiki/Algerian_Sign_Language}}
-}
-@online{asp_img,
-	title = {Profiles of African Sign Languages and Deaf Culture - Algeria},
-	note = {\url{https://africansignlanguagesresourcecenter.com/profiles-of-african-sign-languages-and-deaf-culture-54-countries/algeria/}}
-}
-@online{ethnologue,
-	title = {Algerian Sign Language - ethnologue},
-	note = {\url{https://www.ethnologue.com/25/language/asp/}}
-}
-@online{flex,
-	title = {Flex-Sensor-components101},
-	note = {\url{https://components101.com/sensors/flex-sensor-working-circuit-datasheet}},
-}
-@online{mpu,
-	title = {MPU6050-components101},
-	note = {\url{https://components101.com/sensors/mpu6050-module}},
-}
-@online{mpu-pinout,
-	title = {Interfacing ESP32 with MPU6050},
-	note = {\url{https://www.tutorialspoint.com/esp32_for_iot/interfacing_esp32_with_mpu6050.htm}},
-}
-@online{fingerspelling,
+@misc{fingerspelling,
 	title = {Lifeprint Fingurespell Library}
-	note = {https://www.lifeprint.com/asl101/fingerspelling/index.htm}
+	note = {\url{https://www.lifeprint.com/asl101/fingerspelling/index.htm}}
 }
 @inproceedings{wu2018american,
 	title={American Sign Language fingerspelling classification using convolutional neural networks},
@@ -104,4 +68,39 @@
 	pages={1157-1163},
 	year={2011}
 }
-
+@misc{ethnologue,
+	title = {Algerian Sign Language - ethnologue},
+	note = {\url{https://www.ethnologue.com/25/language/asp/}}
+}
+@thesis{teaching,
+	author = {Hichem Abdelouafi and Mohammed Omari},
+	title = {Teaching Sign Language to the Deaf Children in Adrar, Algeria},
+	institution = {Ahmed Draia University - Adrar},
+	date = {2018},
+	pages = {12}
+}
+@misc{wiki,
+	title = {Algerian Sign Language - wikipedia},
+	date = {2022, December 31},
+	note = {\url{https://en.wikipedia.org/wiki/Algerian_Sign_Language}}
+}
+@book{sara,
+	author = {Sara Lanesman},
+	title = {Algerian Jewish Sign Language: its emergence and survival},
+	date = {2016},
+	institution = {Ishara Press},
+	isbn = {9780992922108},
+	ocn = {97809,92922108},
+	pages = {12}
+}
+@report{chalenges,
+	author = {Hichem Abdelouafi},
+	title = {Challenges of Deaf Education in Algeria},
+	institution = {University of Adrar Algeria},
+	date = {2020},
+	pages = {12}
+}
+@misc{mpu,
+	title = {MPU6050-components101},
+	note = {\url{https://components101.com/sensors/mpu6050-module}},
+}
