some progress on chapter 2

--- a/writing/main.tex
+++ b/writing/main.tex
@@ -67,6 +67,10 @@
 	short={ML},
 	long={Machine Learning},
 }
+\DeclareAcronym{knn}{
+	short={KNN},
+	long={K-nearest neighbors}
+}
 \DeclareAcronym{dl}{
 	short={DL},
 	long={Deep Learning},
@@ -78,6 +82,10 @@
 \DeclareAcronym{ann}{
 	short={ANN},
 	long={Artificial Neural Network}
+}
+\DeclareAcronym{mlp}{
+	short={MLP},
+	long={multilayer perceptrons}
 }
 \DeclareAcronym{dnn}{
 	short={DNN},
@@ -152,15 +160,15 @@
 	\pagenumbering{roman}
 	\input{includes/dedication.tex}
 	\clearpage
-	\printacronyms
-	\clearpage
-	\input{includes/abstract.tex}
-	\clearpage
 	\tableofcontents
 	\clearpage
 	\listoffigures
 	\clearpage
 	\listoftables
+	\clearpage
+	\printacronyms
+	\clearpage
+	\input{includes/abstract.tex}
 	\clearpage
 	\pagenumbering{arabic}
 	\pagestyle{fancy}
