some work on chapter 2

--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -104,3 +104,13 @@
 	title = {MPU6050-components101},
 	note = {\url{https://components101.com/sensors/mpu6050-module}},
 }
+@INPROCEEDINGS{5656963,
+	author={Kshirsagar, Ketki P. and Doye, Dharmpal},
+	booktitle={2010 International Conference on Advances in Recent Technologies in Communication and Computing}, 
+	title={Object Based Key Frame Selection for Hand Gesture Recognition}, 
+	year={2010},
+	volume={},
+	number={},
+	pages={181-185},
+	doi={10.1109/ARTCom.2010.80}}
+
