--- a/writing/main.tex
+++ b/writing/main.tex
@@ -71,6 +71,10 @@
 	short={KNN},
 	long={K-nearest neighbors}
 }
+\DeclareAcronym{dtw}{
+	short={DTW},
+	long={Dynamic time wrapping}
+}
 \DeclareAcronym{dl}{
 	short={DL},
 	long={Deep Learning},
