some work on chapter 2

--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -112,5 +112,12 @@
 	volume={},
 	number={},
 	pages={181-185},
-	doi={10.1109/ARTCom.2010.80}}
-
+	doi={10.1109/ARTCom.2010.80}
+}
+@INPROCEEDINGS{5995718,
+	author={Athitsos, V., Wang, H. & Stefan, A},
+	title={A database-based framework for gesture recognition}, 
+	year={2010},
+	pages={511–526},
+	doi={10.1007/s00779-009-0276-x}
+}
