--- a/writing/main.tex
+++ b/writing/main.tex
@@ -75,6 +75,10 @@
 	short={DTW},
 	long={Dynamic time wrapping}
 }
+\DeclareAcronym{hsbn}{
+	short={HSBN},
+	long={Handshape Bayesian Network}
+}
 \DeclareAcronym{dl}{
 	short={DL},
 	long={Deep Learning},
