add aknowledgment, some work on chapter 2, change some images

--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -104,20 +104,48 @@
 	title = {MPU6050-components101},
 	note = {\url{https://components101.com/sensors/mpu6050-module}},
 }
-@INPROCEEDINGS{5656963,
-	author={Kshirsagar, Ketki P. and Doye, Dharmpal},
-	booktitle={2010 International Conference on Advances in Recent Technologies in Communication and Computing}, 
-	title={Object Based Key Frame Selection for Hand Gesture Recognition}, 
-	year={2010},
-	volume={},
-	number={},
-	pages={181-185},
-	doi={10.1109/ARTCom.2010.80}
+%@INPROCEEDINGS{5656963,
+%	author={Kshirsagar, Ketki P. and Doye, Dharmpal},
+%	booktitle={2010 International Conference on Advances in Recent Technologies in Communication and Computing}, 
+%	title={Object Based Key Frame Selection for Hand Gesture Recognition}, 
+%	year={2010},
+%	volume={},
+%	number={},
+%	pages={181-185},
+%	doi={10.1109/ARTCom.2010.80}
+%}
+%@INPROCEEDINGS{5995718,
+%	author={Athitsos, V., Wang, H. & Stefan, A},
+%	title={A database-based framework for gesture recognition}, 
+%	year={2010},
+%	pages={511–526},
+%	doi={10.1007/s00779-009-0276-x}
+%}
+@article{ozdemir2020bosphorussign22k,
+	title={Bosphorussign22k sign language recognition dataset},
+	author={{\"O}zdemir, O{\u{g}}ulcan and K{\i}nd{\i}ro{\u{g}}lu, Ahmet Alp and Camg{\"o}z, Necati Cihan and Akarun, Lale},
+	journal={arXiv preprint arXiv:2004.01283},
+	year={2020}
 }
-@INPROCEEDINGS{5995718,
-	author={Athitsos, V., Wang, H. & Stefan, A},
-	title={A database-based framework for gesture recognition}, 
-	year={2010},
-	pages={511–526},
-	doi={10.1007/s00779-009-0276-x}
+@inproceedings{guo2019dense,
+	title={Dense Temporal Convolution Network for Sign Language Translation.},
+	author={Guo, Dan and Wang, Shuo and Tian, Qi and Wang, Meng},
+	booktitle={IJCAI},
+	pages={744--750},
+	year={2019}
+}
+@inproceedings{fang2017deepasl,
+	title={Deepasl: Enabling ubiquitous and non-intrusive word and sentence-level sign language translation},
+	author={Fang, Biyi and Co, Jillian and Zhang, Mi},
+	booktitle={Proceedings of the 15th ACM conference on embedded network sensor systems},
+	pages={1--13},
+	year={2017}
+}
+@inproceedings{renz2021sign,
+	title={Sign language segmentation with temporal convolutional networks},
+	author={Renz, Katrin and Stache, Nicolaj C and Albanie, Samuel and Varol, G{\"u}l},
+	booktitle={ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+	pages={2135--2139},
+	year={2021},
+	organization={IEEE}
 }
