--- a/writing/main.tex
+++ b/writing/main.tex
@@ -11,6 +11,7 @@
 \usepackage{amssymb}
 \usepackage{subcaption}
 \usepackage{fancyhdr}
+\usepackage{array}
 
 \fancyhf{}
 \fancyhead[LE,RO]{\nouppercase{\leftmark\hfill\rightmark}}
@@ -21,6 +22,7 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 \renewcommand{\bibname}{References}
+\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
 
 \title{TAKALEM : Deep learning approach for Algerian sign language recognition}
 \author{Fathi Abdelmalek}
@@ -58,6 +60,10 @@
 \DeclareAcronym{slr}{
 	short={SLR},
 	long={Sign language recognition}
+}
+\DeclareAcronym{slt}{
+	short={SLT},
+	long={Sign language translation}
 }
 \DeclareAcronym{ai}{
 	short={AI},
@@ -102,6 +108,14 @@
 \DeclareAcronym{cnn}{
 	short={CNN},
 	long={Convolutional Neural Network},
+}
+\DeclareAcronym{tcn}{
+	short={TCN},
+	long={Temporal Convolutional Network}
+}
+\DeclareAcronym{ctc}{
+	short={CTC},
+	long={Connectionist Temporal Classification}
 }
 \DeclareAcronym{rnn}{
 	short={RNN},
@@ -177,6 +191,8 @@
 	\printacronyms
 	\clearpage
 	\input{includes/abstract.tex}
+	\clearpage
+	\input{includes/acknowledgements}
 	\clearpage
 	\pagenumbering{arabic}
 	\pagestyle{fancy}
