complete state of the art tables

--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -104,23 +104,6 @@
 	title = {MPU6050-components101},
 	note = {\url{https://components101.com/sensors/mpu6050-module}},
 }
-%@INPROCEEDINGS{5656963,
-%	author={Kshirsagar, Ketki P. and Doye, Dharmpal},
-%	booktitle={2010 International Conference on Advances in Recent Technologies in Communication and Computing}, 
-%	title={Object Based Key Frame Selection for Hand Gesture Recognition}, 
-%	year={2010},
-%	volume={},
-%	number={},
-%	pages={181-185},
-%	doi={10.1109/ARTCom.2010.80}
-%}
-%@INPROCEEDINGS{5995718,
-%	author={Athitsos, V., Wang, H. & Stefan, A},
-%	title={A database-based framework for gesture recognition}, 
-%	year={2010},
-%	pages={511–526},
-%	doi={10.1007/s00779-009-0276-x}
-%}
 @article{ozdemir2020bosphorussign22k,
 	title={Bosphorussign22k sign language recognition dataset},
 	author={{\"O}zdemir, O{\u{g}}ulcan and K{\i}nd{\i}ro{\u{g}}lu, Ahmet Alp and Camg{\"o}z, Necati Cihan and Akarun, Lale},
@@ -148,4 +131,57 @@
 	pages={2135--2139},
 	year={2021},
 	organization={IEEE}
+}
+@inproceedings{mapari2016american,
+	title={American static signs recognition using leap motion sensor},
+	author={Mapari, Rajesh B and Kharat, Govind},
+	booktitle={Proceedings of the Second International Conference on Information and Communication Technology for Competitive Strategies},
+	pages={1--5},
+	year={2016}
+}
+@inproceedings{khelil2016hand,
+	title={Hand gesture recognition using leap motion controller for recognition of arabic sign language},
+	author={Khelil, Bassem and Amiri, Hamid and Chen, T and Kamm{\"u}ller, F and Nemli, I and Probst, CW},
+	booktitle={3rd International conference ACECS},
+	volume={16},
+	pages={233--238},
+	year={2016}
+}
+@article{chong2018american,
+	title={American sign language recognition using leap motion controller with machine learning approach},
+	author={Chong, Teak-Wei and Lee, Boon-Giin},
+	journal={Sensors},
+	volume={18},
+	number={10},
+	pages={3554},
+	year={2018},
+	publisher={MDPI}
+}
+@inproceedings{faisal2021sensor,
+	title={Sensor dataglove for real-time static and dynamic hand gesture recognition},
+	author={Faisal, Md Ahasan Atick and Abir, Farhan Fuad and Ahmed, Mosabber Uddin},
+	booktitle={2021 Joint 10th International Conference on Informatics, Electronics \& Vision (ICIEV) and 2021 5th International Conference on Imaging, Vision \& Pattern Recognition (icIVPR)},
+	pages={1--7},
+	year={2021},
+	organization={IEEE}
+}
+@article{wen2021ai,
+	title={AI enabled sign language recognition and VR space bidirectional communication using triboelectric smart glove},
+	author={Wen, Feng and Zhang, Zixuan and He, Tianyiyi and Lee, Chengkuo},
+	journal={Nature communications},
+	volume={12},
+	number={1},
+	pages={5378},
+	year={2021},
+	publisher={Nature Publishing Group UK London}
+}
+@article{yu2019exploration,
+	title={Exploration of Chinese sign language recognition using wearable sensors based on deep belief net},
+	author={Yu, Yi and Chen, Xiang and Cao, Shuai and Zhang, Xu and Chen, Xun},
+	journal={IEEE journal of biomedical and health informatics},
+	volume={24},
+	number={5},
+	pages={1310--1320},
+	year={2019},
+	publisher={IEEE}
 }
